@@ -1,9 +1,11 @@
 AUX haddock-0.8-prefix.patch 660 RMD160 bf29836f103f82ca4a07493339551fab2d443472 SHA1 d7f1f285fd7b9b06c4a7bcaf3e6800e8944cfe63 SHA256 2332886c1722a7edd7d06e0100b178f35ff0b2e900c7e40325caabdf289f6916
+AUX haddock-2.4.2-Setup.hs 2888 RMD160 6c2a45c69cc4f36cd379a7e94e135b602429ac55 SHA1 4c67796d23bdc72fe829a5cc4a07a2da26ec3c74 SHA256 0b91b924c87a7cd1f430deb47a651af830959fcc7bdae5ee5da6e42a84bade6b
+DIST ghc-paths-0.1.0.5.tar.gz 2304 RMD160 098804e5a48ce9381174245601b3896304464219 SHA1 f9a70a8564be268e4aa88436ea18fc84a1ce303a SHA256 ea9e97425894e3dbd7915e00e107e2e7fc07b6e8293fd2dd66a813f0673cba10
 DIST haddock-0.8-src.tar.gz 162872 RMD160 80b7a582ea91fb36b97675d7ea8a027221a28b8e SHA1 e171d4446ac6fcef526cad4c688892fe587fe90e SHA256 d54078dd9dc75aa589cb05fbe1136c1fb41d4a346e30b71de948425ea7c05a55
 DIST haddock-0.9.tar.gz 163380 RMD160 27685313184e70270d7e4f043c7d671b84acfb23 SHA1 f3c5299b657b170e7a44b66ebd60d3e0947a35aa SHA256 beefd4a6da577978e7a79cabba60970accc5cd48fbb04c424a6b36ace3a9f8d0
 DIST haddock-2.4.2.tar.gz 103033 RMD160 18317b3ffd60f2b0925d635ce1ea2ab35825860c SHA1 cd1de409029bcabdf79b05b4c00c7702c836c765 SHA256 dbf0a7d0103a3ce6a91b2a3b96148c1b9c13ea7f8bd74260c21fe98df7839547
 EBUILD haddock-0.8.ebuild 1788 RMD160 dde05f3da5d43ef099dcead729d9c6a83110a64c SHA1 fd7eb728378c28a76887d978d157bfa51ddbefa7 SHA256 4137380ad4b3691437d35b49503ced30d0cd171d17a10a9535e782ea35a2ddfd
 EBUILD haddock-0.9.ebuild 1262 RMD160 6cd5da7c64d2bfa14068a704df645b7301e051fe SHA1 23b716a95884f2f12af7c5fe34d7ff31d9f86e05 SHA256 b06f91e06e9b731a8c638204f171df4977a0e222bf11523b4b15078df75a0bef
-EBUILD haddock-2.4.2.ebuild 1397 RMD160 419b5293890741355de764b4f35f384d9a531d15 SHA1 eee7816d11280b36278fbd1d5db293e777b2eb65 SHA256 5b8f2a866108456d975c208bf4e6f5dad1f6c1f192864a21066f9ab0d22b15b5
-MISC ChangeLog 7676 RMD160 98055f74874bacfced5cd70ea9ecf8447233a612 SHA1 cc22b4c483f3b0843db9598d3505e139bb4327fe SHA256 a96a3c16893aede000e48a0a43def1e3c95ec73d363602fd61e386a9f0130614
+EBUILD haddock-2.4.2.ebuild 2336 RMD160 c8407bf98a89493c102635a58ab23ada169406bc SHA1 c237cc84ccf5dd97fe04416a337c7c8b1872e089 SHA256 3cfaa658e80f6737414872062c8ac97304ec0adb07f5a6789f38dcac017c087e
+MISC ChangeLog 7979 RMD160 47643b82f2bff4e4988305f64f6596799c718682 SHA1 a4431ee3c0bd26c5d93b0d605b482e7b0507aa7d SHA256 18b08d57f3afd159dbc7c81ef12d1f318cf1a763473af78c7d37cb25d7445409
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
